<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="VirtualControlBox" Id="{6f49c6d5-899a-4ebc-950a-52c2621280a6}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	bSTOP : BOOL := FALSE;
	bSTART : BOOL := FALSE;
	//bLightRed : BOOL := FALSE;
	//bLightGreen : BOOL := FALSE;
	bAuto : BOOL;
	bManual : BOOL;
	stJOY : ST_Joystick;
	//eMode : E_Mode;// := E_Mode.OFF;
	//strMode : STRING;
	//strStatus : STRING;
	//eStatus : E_Status;// := E_Status.NotReady;
	//eMode : E_Mode;// := E_Mode.OFF;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>