<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="Working" Id="{f8500bba-6568-4e7a-acda-c4c4b7015539}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	eMode : E_Mode;
	eStatus : E_Status := E_Status.NotReady; //Initial status
	strMode : STRING;
	strStatus : STRING;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>